# hermes-os

./: .gitignore  hermes.py  pyproject.toml  startup.py
app/: main.py
app/cli/: cli.py
app/core/: agent.py  agent_loader.py  analyzer_agent.py  auto_repair.py  bain.py  base_agent.py  brain.py  cli.py  comand_center.py  command_center.py  config.py  database.py  events.py  executor_agent.py  goals.py  learning_memory.py  logger.py  memory.py  memory_agent.py  message_bus.py  persistent_memory.py  plugin.py  plugin_manager.py  router.py  safe_execute.py  scheduler.py  shared_memory.py  startup.py
app/core/agents/: agent_loader.py  analytics.py  analyzer.py  analyzer_agent.py  base_agent.py  design.py  executor.py  executor_agent.py  fulfillment.py  marketing.py  memory_agent.py  organic.py  product_research.py  store_ops.py  strategy.py  supplier.py  support.py
app/core/analytics/: sales_analytics.py
app/core/autopilot/: autopilot_engine.py  dropshipping_autopilot.py
app/core/backup/: backup_engine.py
app/core/bus/: event_bus.py
app/core/business/: business_profile.py  dropshipping_business.py
app/core/campaigns/: campaign_manager.py
app/core/cli/: cli.py
app/core/command_center/: command_center.py
app/core/connectors/: store_connector.py  supplier_connector.py
app/core/customer_support/: support_center.py
app/plugins/: example.py  logger_plugin.py  registry.py
config/: config.yaml
core/: logger.py  plugin_manager.py
hermes.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_dropshipping_business_agents.py
(+30 files in other folders)
